Fix wp-block-image. Allow gallery images to use full screen width on smaller screens before going back to 50%.

--- a/wp-content/themes/ergot/sass/components/_block-image.scss
+++ b/wp-content/themes/ergot/sass/components/_block-image.scss
@@ -2,22 +2,23 @@
   @include rounded;
   @include shadow;
   
-  position: relative;
+  // position: relative;
 
   margin-right: auto;
   margin-left: auto;
   max-width: 70vw;
-  overflow: hidden;
+  // overflow: hidden;
 
   img {
-    position: absolute;
-    top: 50%;
-    left: 50%;
+    // position: absolute;
+    // top: 50%;
+    // left: 50%;
 
     display: block;
-    height: 100%;
-    object-fit: cover;
+    height: auto;
+    width: 100%
+    // object-fit: cover;
 
-    transform: translate(-50%, -50%);
+    // transform: translate(-50%, -50%);
   }
 }
