--- a/wp-content/themes/ergot/sass/components/_gallery.scss
+++ b/wp-content/themes/ergot/sass/components/_gallery.scss
@@ -1,10 +1,18 @@
 .wp-block-gallery {
   margin-right: auto;
   margin-left: auto;
-  max-width: 70vw;
+  @media (min-width: 40em) {
+    max-width: 70vw;
+  }
 
   .blocks-gallery-item {
+    margin-right: 0;
     max-height: 30em;
+    width: 100%;
+    @media (min-width: 40em) {
+      margin-right: 16px;
+      width: calc((100% - 16px)/2);
+    }
     img {
       @include rounded;
       @include shadow;
